feat:properties db

--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=jwt
+spring.datasource.url=jdbc:sqlserver:/
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect
