feat: delete vscode

--- a/jwt/.gitignore
+++ b/jwt/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-.vscode/
+
 
 ### STS ###
 .apt_generated
@@ -31,4 +31,4 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
+./vscode
