--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/jwt_db
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
