--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
+logging.level.com.dev.jwt.jwt.validation=INFO
